welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
		if(estSurBiscuit) {x=x+1}}
                                    ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
		if(estSurBiscuit) {x=x+1}}
                ^Program:7: error: not found: value x
		if(x=1) {return true} else {return false}
                   ^